--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -25,6 +25,23 @@ body {
     flex-direction: column; */
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+/* ::-webkit-scrollbar-thumb {
+    background: linear-gradient(180deg, transparent, red);
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-button {
+    display: none;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #16151C;
+} */
+
 header {
     width: 100%;
     height: 11vh;
@@ -127,6 +144,10 @@ header ul li a:hover::after {
     width: 100%;
 }
 
+/* .idioma {
+    pointer-events:none;
+} */
+
 li:hover ul {
     display: block;
 }
@@ -168,7 +189,7 @@ section {
     content: "";
     position: absolute;
     inset: -10px 75px;
-    background: linear-gradient(90deg, green, orange, orange, red);
+    background: linear-gradient(180deg, green, orange, orange, red);
     transition: 1500ms;
     animation: rotate 2000ms linear infinite;
 }
@@ -420,6 +441,7 @@ section {
 
 #HardSkills {
     height: auto;
+    min-height: 90vh;
     padding-bottom: 5vh;
 }
 
