--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -568,28 +568,45 @@ section {
 }
 
 #Experiencia {
-    background-color: rgb(247, 206, 125);
+    background-color: #16151C;
+    height: auto;
+    min-height: 90vh;
+    padding-top: 15vh;
+    padding-bottom: 10vh;
+    overflow: visible;
+    border-top: 3px dashed #16151C;
 }
 
 .projects_container{
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
+    /* display: flex;
+    flex-wrap: wrap; */
+    /* position: relative;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%;
-    gap: 70px;
+    transform: translate(-50%, -50%); */
+    width: 100%;
+    height: 100%;
+    /* gap: 70px; */
+}
+
+.projects_container div {
+    margin: 0;
+    margin-bottom: 5vh;
+}
+
+.projects_container div div {
+    display: flex;
+    justify-content: center;
 }
 
 .project_card{
     position: relative;
-    width: 200px;
     height: 200px;
+    width: 300px;
     overflow: hidden;
     transition-duration: 500ms;
-    mix-blend-mode: multiply;
-    border: 1px solid #16151C;
+    /* mix-blend-mode: multiply; */
+    border: 2px dashed red;
 }
 
 .project_card:hover {
@@ -610,14 +627,15 @@ section {
 
 .project_content {
     position: absolute;
+    flex-direction: column;
     bottom: -200px;
     left: 0;
     width: 100%;
     height: 60%;
-    background: linear-gradient(180deg, darkgreen, #16151C);
+    background: linear-gradient(180deg, transparent 0%, rgba(255, 0, 0, 0.5) 10%, darkred 90%,  #16151C 100%);
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
-    mix-blend-mode: multiply;
+    /* mix-blend-mode: multiply; */
     text-align: center;
     color: white;
     transition-duration: 500ms;
@@ -625,7 +643,7 @@ section {
 }
 
 .project_card:hover .project_content {
-    bottom: 0px;
+    bottom: -5vh;
 }
 
 .project_content h2 {
