--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -245,8 +245,8 @@ section {
 
 #Objetivos {
     position: relative;
-    background-color: rgb(247, 206, 125);
-    background-image: url(../img/sunrise.jpg);
+    /* background-image: url(../img/sunrise.jpg); */
+    background-color: white;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -295,17 +295,15 @@ section {
 }
 
 .foto_perfil {
-    background-image: url(../img/Imagen_Perfil.jpg);
+    background-image: url(../img/foto_perfil.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
-    height: 95px;
-    width: 80px;
-    border-radius: 0px;
-    border-bottom-left-radius: 50%;
-    border-top-right-radius: 50%;
+    background-size: contain;
+    height: 140px;
+    width: 98px;
+    border-radius: 15px;
     position: absolute;
-    top: 80px;
-    left: 30px;
+    top: 55px;
+    left: 25px;
 }
 
 .ul_perfil_1,
@@ -315,9 +313,9 @@ section {
 }
 
 .ul_perfil_1 {
-    top: 85px;
-    left: 100px;
-    margin-right: 24px;
+    top: 70px;
+    left: 120px;
+    margin-right: 15px;
 }
 
 .ul_perfil_1 li:not(:last-child) {
@@ -325,7 +323,7 @@ section {
 }
 
 .ul_perfil_2 {
-    top: 230px;
+    top: 250px;
     margin-right: 24px;
     font-size: 15px;
 }
@@ -377,7 +375,7 @@ section {
     transform: translate(-50%, -50%);
     transform-style: preserve-3d;
     box-shadow: 10px 20px 40px rgba(0, 0, 0, 0.5);
-    padding: 25px 25px 0px 25px;
+    padding: 25px 25px 0px 10px;
     border: 3px groove orange;
 }
 
@@ -457,8 +455,8 @@ section {
     /* width: 19%; */
     font-size: 20px;
     margin-bottom: 10px;
-    background-color: darkred;
-    color: white;
+    background: linear-gradient(90deg, #16151C 65%,  orange 100%);
+    color: orange;
 }
 
 .img {
@@ -586,6 +584,9 @@ section {
     transform: translate(-50%, -50%); */
     width: 100%;
     height: 100%;
+    padding-left: 5vh;
+    padding-right: 5vh;
+    padding-bottom: 5vh;
     /* gap: 70px; */
 }
 
