--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -44,7 +44,7 @@ body {
 
 header {
     width: 100%;
-    height: 11vh;
+    height: 9vh;
     background-color: #16151C;
     position: fixed;
     top: 0px;
@@ -62,25 +62,29 @@ header ul li {
     width: 14.3%;
 }
 
-header ul li a {
+header ul li a, header ul li button {
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     font-size: 13px;
-    height: 4em;
+    text-transform: uppercase;
+    height: 3em;
+    width: 100%;
     text-decoration: none;
     padding: 0% 0px;
     position: relative;
+    background: none;
+    border: none;
 }
 
-header ul li a:hover {
+header ul li a:hover, header ul li button:hover {
     z-index: 10000;
     color: #16151C;
     font-weight: 700;
 }
 
-header ul li a::before {
+header ul li a::before, header ul li button::before {
     content: "";
     position: absolute;
     top: 0;
@@ -94,13 +98,13 @@ header ul li a::before {
     transform-origin: top;
 }
 
-header ul li a:hover::before {
+header ul li a:hover::before, header ul li button:hover::before {
     transition: transform 700ms;
     transform-origin: left;
     transform: scale(1);
 }
 
-header ul li a::after {
+header ul li a::after, header ul li button::after {
     content: "";
     position: absolute;
     top: 0;
@@ -116,7 +120,7 @@ header ul li a::after {
     transform-origin: bottom left;
 }
 
-header ul li a:hover::after {
+header ul li a:hover::after, header ul li button:hover::after {
     transition: transform 700ms;
     transform: scale(0);
     transform-origin: right;
@@ -878,18 +882,18 @@ footer {
         margin-bottom: 70px;
     }
 
-    header ul li a {
+    header ul li a, header ul li button {
         width: 50%;
         height: auto;
         padding: 14px 16px;
     }
 
-    header ul li a::after {
+    header ul li a::after, header ul li button::after {
         border-bottom: 0px transparent solid;
         transform-origin: top left;
     }
 
-    header ul li a:hover::after {
+    header ul li a:hover::after, header ul li button:hover::after {
         transform-origin: bottom right;
     }
 
