--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -8,6 +8,18 @@
         'opsz' 48
 }
 
+:root {
+    --white: white;
+    --black: black;
+    --no_black: #16151C;
+    --no_black_05: rgba(0, 0, 0, 0.5);
+    --no_black_08: rgba(0, 0, 0, 0.8);
+    --orange: orange;
+    --orange_2: rgb(247, 206, 125);
+    --red: red;
+    --green: green;
+}
+
 * {
     font-family: Garamond;
 }
@@ -30,7 +42,7 @@ body {
 }
 
 /* ::-webkit-scrollbar-thumb {
-    background: linear-gradient(180deg, transparent, red);
+    background: linear-gradient(180deg, transparent, var(--red));
     border-radius: 6px;
 }
 
@@ -39,13 +51,13 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #16151C;
+    background-color: var(--no_black);
 } */
 
 header {
     width: 100%;
     height: 9vh;
-    background-color: #16151C;
+    background-color: var(--no_black);
     position: fixed;
     top: 0px;
     z-index: 8;
@@ -66,7 +78,7 @@ header ul li a, header ul li button {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: var(--white);
     font-size: 13px;
     text-transform: uppercase;
     height: 3em;
@@ -80,7 +92,7 @@ header ul li a, header ul li button {
 
 header ul li a:hover, header ul li button:hover {
     z-index: 10000;
-    color: #16151C;
+    color: var(--no_black);
     font-weight: 700;
 }
 
@@ -92,7 +104,7 @@ header ul li a::before, header ul li button::before {
     width: 100%;
     height: 100%;
     z-index: -1;
-    background-color: rgb(247, 206, 125);
+    background-color: var(--orange_2);
     transition: transform 700ms;
     transform: scale(0);
     transform-origin: top;
@@ -112,8 +124,8 @@ header ul li a::after, header ul li button::after {
     width: 100%;
     height: 100%;
     background: transparent;
-    border-top: 1px orange solid;
-    border-bottom: 1px orange solid;
+    border-top: 1px var(--orange) solid;
+    border-bottom: 1px var(--orange) solid;
     box-sizing: border-box;
     transition: transform 700ms;
     transform: scale(1);
@@ -136,12 +148,12 @@ header ul li a:hover::after, header ul li button:hover::after {
 .dropdown ul li {
     /* height: 20%; */
     width: 100%;
-    background-color: #16151C;
+    background-color: var(--no_black);
 }
 
 .dropdown ul li a {
     text-decoration: none;
-    color: white;
+    color: var(--white);
     padding: 12px auto;   
     display: flex;
     text-align: center;
@@ -164,7 +176,7 @@ section {
 }
 
 #home {
-    background-color: #16151C;
+    background-color: var(--no_black);
     height: 100vh;
     display: flex;
     align-items: center;
@@ -193,7 +205,7 @@ section {
     content: "";
     position: absolute;
     inset: -10px 75px;
-    background: linear-gradient(180deg, green, orange, orange, red);
+    background: linear-gradient(180deg, var(--green), var(--orange), var(--orange), var(--red));
     transition: 1500ms;
     animation: rotate 2000ms linear infinite;
 }
@@ -206,7 +218,7 @@ section {
     content: "";
     position: absolute;
     inset: 6px;
-    background-color: #16151C;
+    background-color: var(--no_black);
     border-radius: 50%;
 }
 
@@ -223,7 +235,7 @@ section {
     /* display: flex;
     align-items: center;
     justify-content: center; */
-    color: white;
+    color: var(--white);
     font-family: Roboto;
     font-weight: 300;
     text-transform: uppercase;
@@ -243,14 +255,14 @@ section {
 }
 
 #expand_home {
-    background-color: #16151C;
+    background-color: var(--no_black);
     height: 20vh;
 }
 
 #Objetivos {
     position: relative;
     /* background-image: url(../img/sunrise.jpg); */
-    background-color: white;
+    background-color: var(--white);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -279,11 +291,11 @@ section {
 .perfil_card {
     width: 350px;
     height: 400px;
-    background-color: #16151C;
+    background-color: var(--no_black);
     position: absolute;
-    box-shadow: 10px 30px 50px 25px rgba(0, 0, 0, 0.5);
-    color: rgb(247, 206, 125);
-    border: 3px groove orange;
+    box-shadow: 10px 30px 50px 25px var(--no_black_05);
+    color: var(--orange_2);
+    border: 3px groove var(--orange);
     z-index: 5;
     backface-visibility: hidden;
     transform-style: preserve-3d;
@@ -295,7 +307,7 @@ section {
 
 .perfil_card:hover {
     transform: scale(1.1);
-    border: 3px groove orange;
+    border: 3px groove var(--orange);
 }
 
 .foto_perfil {
@@ -335,14 +347,14 @@ section {
 .card_backside {
     width: 350px;
     height: 400px;
-    background-color: #16151C;
-    color: white;
+    background-color: var(--no_black);
+    color: var(--white);
     font-size: 14px;
     position: absolute;
     transform: rotateY(180deg);
-    box-shadow: 10px 20px 30px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 20px 30px var(--no_black_05);
     padding: 25px 25px 0px 25px;
-    border: 3px groove orange;
+    border: 3px groove var(--orange);
 }
 
 .card_backside ul .quim {
@@ -351,7 +363,7 @@ section {
 
 /* .collapse_button {
     background-color: transparent;
-    color: rgb(247, 206, 125);
+    color: var(--orange_2);
     border: none;
     cursor: pointer;
     text-align: left;
@@ -361,7 +373,7 @@ section {
     width: 344px;
     display: none;
     overflow: hidden;
-    background-color: #16151C;
+    background-color: var(--no_black);
 }
 
 .expand_content {
@@ -371,16 +383,16 @@ section {
 .card_page {
     width: 350px;
     height: 400px;
-    background-color: #16151C;
-    color: white;
+    background-color: var(--no_black);
+    color: var(--white);
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     transform-style: preserve-3d;
-    box-shadow: 10px 20px 40px rgba(0, 0, 0, 0.5);
+    box-shadow: 10px 20px 40px var(--no_black_05);
     padding: 25px 25px 0px 10px;
-    border: 3px groove orange;
+    border: 3px groove var(--orange);
 }
 
 .card_page_click {
@@ -400,7 +412,7 @@ section {
 }
 
 .close_card span {
-    color: orange;
+    color: var(--orange);
 }
 
 .iconos_box {
@@ -459,8 +471,8 @@ section {
     /* width: 19%; */
     font-size: 20px;
     margin-bottom: 10px;
-    background: linear-gradient(90deg, #16151C 65%,  orange 100%);
-    color: orange;
+    background: linear-gradient(90deg, var(--no_black) 65%,  var(--orange) 100%);
+    color: var(--orange);
 }
 
 .img {
@@ -570,17 +582,17 @@ section {
 }
 
 #Experiencia {
-    background-color: #16151C;
+    background-color: var(--no_black);
     height: auto;
     min-height: 90vh;
     padding-top: 11vh;
     padding-bottom: 10vh;
     overflow: visible;
-    border-top: 3px dashed #16151C;
+    border-top: 3px dashed var(--no_black);
 }
 
 #Experiencia h1 {
-    color: white;
+    color: var(--white);
     margin-left: 7%;
     margin-bottom: 10vh;
 }
@@ -617,12 +629,13 @@ section {
     overflow: hidden;
     transition-duration: 500ms;
     /* mix-blend-mode: multiply; */
-    border: 2px dashed red;
+    border: 2px dashed var(--red);
+    cursor: pointer;
 }
 
 .project_card:hover {
     transform: scale(1.25);
-    box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 20px 40px var(--white);
 }
 
 .project_img {
@@ -636,6 +649,17 @@ section {
     left: 0;
 }
 
+.project_img_1 {
+    background-image: url(../img_1/word_cloud_acq.png);
+    background-position: center;
+}
+
+.project_img_2 {
+    background-image: url(../img_2/countries_head_5.PNG);
+    /* background-size: 1200px;
+    background-position: right; */
+}
+
 .project_content {
     position: absolute;
     flex-direction: column;
@@ -643,18 +667,18 @@ section {
     left: 0;
     width: 100%;
     height: 60%;
-    background: linear-gradient(180deg, transparent 0%, rgba(255, 0, 0, 0.5) 10%, darkred 90%,  #16151C 100%);
+    background: linear-gradient(180deg, transparent 0%, #16151c75 10%, var(--no_black) 75%, var(--no_black) 100%);
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     /* mix-blend-mode: multiply; */
     text-align: center;
-    color: white;
+    color: var(--white);
     transition-duration: 500ms;
     transition-delay: 250ms;
 }
 
 .project_card:hover .project_content {
-    bottom: -5vh;
+    bottom: -35px;
 }
 
 .project_content h2 {
@@ -662,7 +686,7 @@ section {
 }
 
 #SoftSkills {
-    background-color: white;
+    background-color: var(--white);
     min-height: 100vh;
     height: auto;
     padding-top: 15vh;
@@ -671,25 +695,25 @@ section {
 }
 
 #SoftSkills h1 {
-    color: black;
+    color: var(--black);
 }
 
 #SoftSkills .accordion{
-    width: 70%;
+    width: 75%;
 }
 
 #SoftSkills .accordion .accordion-item {
-    border: 1px solid black;
+    border: 1px solid var(--black);
 }
 
 #SoftSkills .accordion .accordion-item .accordion-header .accordion-button {
-    color: black;
-    background-color: orange;
+    color: var(--black);
+    background-color: var(--orange);
     box-shadow: none ;
 }
 
-/* #SoftSkills .accordion .accordion-item .accordion-header .accordion-button::after {
-    background-image: ;
+/* #SoftSkills .accordion .accordion-item .accordion-collapse .accordion-body {
+    
 } */
 
 #Contactar {
@@ -707,7 +731,7 @@ section {
 
 .form_box h1 {
     margin-top: 1vh;
-    color: white;
+    color: var(--white);
 }
 
 #form_box {
@@ -718,8 +742,8 @@ section {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: rgba(0, 0, 0, 0.8);
-    color: white;
+    background: var(--no_black_08);
+    color: var(--white);
     border-radius: 10px;
 }
 
@@ -741,7 +765,7 @@ form {
 .input_box input:focus,
 #mensaje:focus {
     outline: none;
-    border-color: orange;
+    border-color: var(--orange);
 }
 
 .input_box input {
@@ -751,8 +775,8 @@ form {
     padding-top: 20px;
     background: transparent;
     border: 0;
-    border-bottom: white 2px solid;
-    color: white;
+    border-bottom: var(--white) 2px solid;
+    color: var(--white);
     transition-duration: 500ms;
 }
 
@@ -764,8 +788,8 @@ form {
     background: transparent;
     overflow: hidden;
     border: 0;
-    border-bottom: white 2px solid;
-    color: white;
+    border-bottom: var(--white) 2px solid;
+    color: var(--white);
     transition: border 500ms;
 }
 
@@ -777,23 +801,14 @@ form {
     transition-duration: 500ms;
 }
 
-#enviar {
-    height: 40px;
-    width: 100px;
-    background-color: rgba(0, 0, 255, 0.536);
-    color: white;
-    border: 0;
-    border-radius: 10px;
-}
-
 #enviar:hover {
-    border: white 2px solid;
+    border: var(--white) 2px solid;
 }
 
 .input_box input:focus+label,
 #mensaje:focus+label {
     transform: translateY(-25px);
-    color: orange;
+    color: var(--orange);
 }
 
 .label_up {
@@ -803,8 +818,8 @@ form {
 #enviar {
     width: 100px;
     height: 40px;
-    background-color: #16151C;
-    color: white;
+    background-color: var(--no_black);
+    color: var(--white);
     border: 0;
     border-radius: 10px;
     font-size: 18px;
@@ -812,32 +827,32 @@ form {
 }
 
 #enviar:hover {
-    background-color: orange;
-    color: #16151C;
+    background-color: var(--orange);
+    color: var(--no_black);
 }
 
 .error {
     position: absolute;
-    color: red;
+    color: var(--red);
 }
 
 footer {
     height: 11vh;
-    background-color: #16151C;
-    color: white;
+    background-color: var(--no_black);
+    color: var(--white);
     padding-left: 5vh;
     display: flex;
     align-items: center;
 }
 
 .span_menu {
-    background-color: #16151C;
-    color: white;
+    background-color: var(--no_black);
+    color: var(--white);
     font-size: 35px;
 }
 
 .btn_menu {
-    background-color: #16151C;
+    background-color: var(--no_black);
     border: 0;
     position: fixed;
     top: 15px;
@@ -850,18 +865,11 @@ footer {
         display: block;
     }
 
-    /* section {
-        overflow: visible;
-    } */
-
     header ul {
-        /* position: relative; */
-        /* top: 8vh; */
-        /* left: 0%; */
         width: 100%;
         height: 100vh;
         overflow-y: auto;
-        background: #16151C;
+        background: var(--no_black);
         transition: all 500ms;
         display: none;
         flex-direction: column;
@@ -943,6 +951,18 @@ footer {
 
     .total_card_disappear {
         display: none;
+    }
+
+    .project_content {
+        bottom: -50px;
+    }
+
+    #SoftSkills .accordion{
+        width: 95%;
+    }
+
+    #SoftSkills .accordion .accordion-item .accordion-collapse .accordion-body {
+        text-align: center;
     }
 }
 
