--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -601,7 +601,7 @@ li:hover ul {
 .project_img {
     width: 100%;
     height: 100%;
-    background-image: url(../img/placeholder_project1.png);
+    background-image: url(../img/placeholder_projectX.PNG);
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
@@ -669,9 +669,9 @@ li:hover ul {
     box-shadow: none ;
 }
 
-/* #SoftSkills .accordion .accordion-item .accordion-collapse .accordion-body {
-    
-} */
+#SoftSkills .accordion .accordion-item .accordion-collapse .accordion-body {
+    white-space: pre-line;
+}
 
 /* ## Contact */
 
