--- a/proyecto-frontend/src/styles/index.css
+++ b/proyecto-frontend/src/styles/index.css
@@ -308,9 +308,6 @@ li:hover ul {
     position: relative;
     background-color: var(--white);
     height: 115vh;
-    /* background-image: url(../img/sunrise.jpg); */
-    /* background-repeat: no-repeat;
-    background-size: cover; */
 }
 
 .total_card {
@@ -337,25 +334,23 @@ li:hover ul {
     position: absolute;
     box-shadow: 10px 30px 50px 25px var(--no_black_05);
     color: var(--white);
-    border: 3px groove var(--orange);
+    border-color: var(--orange);
+    border-style: inset;
+    border-width: 2px 2px 2px 0px;
     z-index: 5;
     backface-visibility: hidden;
     transform-style: preserve-3d;
-    transform-origin: right;
+    transform-origin: left;
     transform-style: preserve-3d;
     cursor: pointer;
     transition: 500ms;
 }
 
 .perfil_card:hover {
-    transform: scale(1.1);
-    border: 3px groove var(--orange);
+    transform: rotateY(-10deg);
 }
 
 .foto_perfil {
-    background-image: url(../img/foto_perfil.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
     height: 140px;
     width: 98px;
     border-radius: 15px;
@@ -397,7 +392,8 @@ li:hover ul {
     transform: rotateY(180deg);
     box-shadow: 10px 20px 30px var(--no_black_05);
     padding: 25px 5px 0px 5px;
-    border: 3px groove var(--orange);
+    border: 3px inset var(--orange);
+    backface-visibility: hidden;
 }
 
 .card_backside ul .quim {
@@ -416,7 +412,7 @@ li:hover ul {
     transform-style: preserve-3d;
     box-shadow: 10px 20px 40px var(--no_black_05);
     padding: 35px 5px 0px 5px;
-    border: 3px groove var(--orange);
+    border: 3px inset var(--orange);
 }
 
 .card_page_click {
@@ -437,6 +433,11 @@ li:hover ul {
 
 .close_card span {
     color: var(--orange);
+    transition: 500ms;
+}
+
+.close_card:hover span {
+    color: var(--red);
 }
 
 .iconos_box {
@@ -528,12 +529,13 @@ li:hover ul {
 .img {
     object-fit: cover;
     max-width: 100%;
-    max-height: 60px;
+    max-height: 50px;
 }
 
 .img_B1,
 .img_B2,
-.img_B3 {
+.img_B3,
+.img_E5 {
     max-height: 75px;
 }
 
@@ -546,6 +548,14 @@ li:hover ul {
 
 .img_E1,
 .img_E2 {
+    max-height: 100px;
+}
+
+.img_E3 {
+    max-height: 45px;
+}
+
+.img_E4 {
     max-height: 100px;
 }
 
@@ -607,7 +617,6 @@ li:hover ul {
 .project_img {
     width: 100%;
     height: 100%;
-    background-image: url(../img/placeholder_projectX.PNG);
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
@@ -626,6 +635,18 @@ li:hover ul {
 
 .project_img_3 {
     background-image: url(../img_3/seguros_experiencia.png);
+}
+
+.project_img_4 {
+    background-image: url(../img/prova_hackato.PNG);
+}
+
+.project_img_5 {
+    background-image: url(../img/llm_faqs.PNG);
+}
+
+.project_img_6 {
+    background-image: url(../img/llm_sql.PNG);
 }
 
 .project_content {
